# Traffic_Dashboard

./: .gitignore  .gitmodules  CMakeLists.txt  DataElements.txt  README.md  build.sh  clean-linux.sh  clean.sh  dockerfile  log.txt  mcny.txt  mtl.txt  nysdot.txt  nysta.xml  onmt.txt  ott.txt  ottawa.json  output.sh  output.txt  sample_montreal.xml  sample_ongov.html  sample_ottawa.json
database/: data.txt  schema.mwb
database/scripts/: aggregate.sql  all_events.sql  create_tables.sql  insert_data.sql  join1.sql  join2.sql  logical.sql  outer.sql  subquery.sql
include/: Data.h  Engine.h  Output.h  Render.h  Traffic.h  Video.h  main.h
include/Data/: DataUtils.h  RestAPI.h  Traffic.h
include/Data/Traffic/: MCNY.h  MTL.h  NYSDOT.h  NYSTA.h  ONGOV.h  ONMT.h  OTT.h  Traffic.h
include/Traffic/: MCNY.h  NYSDOT.h  ONMT.h
logs/: mtl_details.txt  mtl_log.txt  ont_log.txt  ott_log.txt
src/: Data.cpp  Engine.cpp  Output.cpp  Render.cpp  Traffic.cpp  Video.cpp  main.cpp
src/Data/: DataUtils.cpp  RestAPI.cpp  Traffic.cpp
src/Data/Traffic/: MCNY.cpp  MTL.cpp  NYSDOT.cpp  NYSTA.cpp  ONGOV.cpp  ONMT.cpp  OTT.cpp  Traffic.cpp
src/Traffic/: MCNY.cpp  NYSDOT.cpp  ONMT.cpp
temp_processing/: errorcases.txt  mcny.txt  mtl.txt  nysdot.txt  ongov.txt  ongov_http_payloads.txt  onmt.txt  ott.txt
